--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="info">
     <h1>Интернет магазин сертифицированных</h1><br>
     <h2>златоустовских ножей
-       <br> <p>Добро пожаловать на официальный сайт «ЗЛАТМАКС»! В нашем магазине представлен наиболее широкий выбор Златоустовских ножей от Златоустовских Оружейных Фабрик и компаний, мы являемся официальными поставщиками.
+       <p>Добро пожаловать на официальный сайт «ЗЛАТМАКС»! В нашем магазине представлен наиболее широкий выбор Златоустовских ножей от Златоустовских Оружейных Фабрик и компаний, мы являемся официальными поставщиками.
 </p>
     </h2>
 </div>
@@ -75,7 +75,6 @@
     <div class="knife">
         <img src="style/assets/images/artage-io-thumb-3eb7dc9f044a998d2aab1b457afe81cb 1.png" alt="ножи">
     </div>
- <div class="endContainer">
         <div class="endOne">
             <img src="style/assets/images/Group 73.png" alt="иконка">
             <p>Гарантия 100% возврата денежных средств</p>
@@ -92,7 +91,6 @@
             <img src="style/assets/images/Group 71.png" alt="иконка">
             <p>Скидки постоянным 
                 покупателям. </p>
-        </div>
     </div>
 </main>
 </body>
